# Theia-Language

./: .gitignore  LICENSE  README.md  build.sh  keywords.txt  run.sh
Content/: backup.th
doc/: index.html
program/: backup.th  test.th
sphen/: CMakeLists.txt  ast.c  ast.h  debug.c  debug.h  lexer.c  lexer.h  main.c  parser.c  parser.h  str.c  str.h  tokens.c  tokens.h
theia/: CMakeLists.txt  ast.hpp  lexer.c  lexer.h  main.cpp  parser.h  tokens.c  tokens.h  tools.c  tools.h
